WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72344
AX: WKAccessibilityWebObjectPage should not call super in accessibilityAttributeValue:
https://bugs.webkit.org/show_bug.cgi?id=72344
Summary
AX: WKAccessibilityWebObjectPage should not call super in accessibilityAttrib...
chris fleizach
Reported
2011-11-14 18:57:33 PST
I'm seeing a lot of -[WKAccessibilityWebPageObject accessibilityAttributeValue:]: unrecognized selector sent to instance 0x7f8101d197f0 lately. I think it's because VoiceOver is asking for AXSubrole when it's not a supported attribute. We shouldn't call super on accessibilityAttributeValue: because apparently it's not supported on NSObject, even though it's declared as a category on NSObject
Attachments
patch
(1.28 KB, patch)
2011-11-14 19:01 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-11-14 19:01:58 PST
Created
attachment 115084
[details]
patch
WebKit Review Bot
Comment 2
2011-11-15 14:24:15 PST
Comment on
attachment 115084
[details]
patch Clearing flags on attachment: 115084 Committed
r100323
: <
http://trac.webkit.org/changeset/100323
>
WebKit Review Bot
Comment 3
2011-11-15 14:24:19 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug