AX: WKAccessibilityWebObjectPage should not call super in accessibilityAttributeValue: https://bugs.webkit.org/show_bug.cgi?id=72344

Reviewed by Beth Dakin.

* WebProcess/WebPage/mac/WKAccessibilityWebPageObject.mm:
(-[WKAccessibilityWebPageObject accessibilityAttributeValue:]):


Canonical link: https://commits.webkit.org/88864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100323 268f45cc-cd09-0410-ab3c-d52691b4dbfc